--- a/origem.html
+++ b/origem.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <title>Origem CSS: Externo, Interno e Inline</title>
     <style>
-        /* ... */
+        body {
+            background-color: aquamarine;
+        }
     </style>
+    <link rel="stylesheet" href="css/externo.css" class="css">
 </head>
 
-<body>
+<body style="background-color: cadetblue;">
     <h1>E agora?</h1>
 </body>
 
