--- a/cores.html
+++ b/cores.html
@@ -11,10 +11,28 @@
             https://coolors.co/
             http://paletton.com/
         */
+
+        body {
+            background-color: green;
+            background-color: #f67809;
+            background-color: #abc; /* #aabbcc */
+            background-color: #ee992280; /* transparencia */
+            background-color: rgba(55, 205, 212, 0.5); /* transparencia */
+            background-color: hsl(299, 58%, 50%);
+            background-color: hsla(299, 58%, 50%, 0.5);
+            background-color: rgb(55, 110, 220);
+        }
+
+        .testeCor {
+            width: 200px;
+            height: 200px;
+            background-color: #ee992280; 
+        }
     </style>
 </head>
 
 <body>
+    <div class="testeCor"></div>
 
 </body>
 
