--- a/texto.html
+++ b/texto.html
@@ -11,10 +11,64 @@
             margin: 0;
         }
 
+        html {
+            font-size: 30px;
+        }
+
         body {
             display: flex;
             flex-direction: column;
             align-items: center;
+        }
+
+        p {
+            font-size: 1em;
+            font-size: 100%;
+            font-size: 16px;
+            font-size: 12pt;
+
+            /* unidades absolutas */
+            font-size: 100px;
+            font-size: 72pt;
+
+            /* unidades relativas */
+            font-size: 2.2em;
+            font-size: 2.2rem;
+            font-size: 50vh;
+            font-size: 10vw;
+
+            font-family: monospace;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: cursive;
+
+            font-weight: bolder;
+            font-style: italic;
+            text-transform: capitalize;
+            word-spacing: 10px;
+            letter-spacing: 20px;
+            line-height: 2.5em;
+            text-align: center;
+        }
+
+        .botao {
+            font-size: 28px;
+            text-decoration: none;
+            padding: 10px 30px;            
+        }
+
+        .destaque{
+            color: #fff;
+            background-color: tomato;
+            box-shadow: 2px  2px 1px 1px rgba(0, 0, 0, 0.59);
+        }
+
+        .destaque:hover{
+            background-color: rgba(255, 99, 71, 0.837);
+        }
+
+        .destaque:active{
+            box-shadow: none;
         }
     </style>
 </head>
