--- a/mediaQuery.html
+++ b/mediaQuery.html
@@ -1,22 +1,71 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>Media Query</title>
     <style>
-        div {
+        /* div {
             font-size: 40px;
             margin: 20px;
             padding: 20px;
             background-color: coral;
             border: solid 5px;
             display: none;
+        } */
+
+        .container {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
         }
+
+        @media (max-width: 680px) {
+            .mobile {
+                flex-direction: column;
+            }
+        }
+
+        .botao {
+            background-color: orangered;
+
+            font-size: 28px;
+            text-align: center;
+            font-weight: bold;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+            width: 120px;
+            margin: 5px;
+            padding: 10px 30px;
+        }
+
+        /* @media (max-width: 600px) {
+            .muito-pequeno {
+                display: block;
+            }
+        }
+
+        @media (max-width: 1000px), (orientation: portrait) {
+            .pequeno-retrato {
+                display: block;
+            }
+        }
+
+        @media (min-width: 500px) and (max-width: 1000px) {
+            .intervalo { display: block; }
+        } */
     </style>
 </head>
+
 <body>
-    <div class="muito-pequeno">Muito Pequeno</div>
+    <!-- <div class="muito-pequeno">Muito Pequeno</div>
     <div class="pequeno-retrato">Pequeno ou Retrato</div>
-    <div class="intervalo">Intervalo</div>
+    <div class="intervalo">Intervalo</div> -->
+    <div class="container mobile">
+        <div class="botao">Salvar</div>
+        <div class="botao">Editar</div>
+        <div class="botao">Deletar</div>
+    </div>
 </body>
+
 </html>
