--- a/desafioCard.html
+++ b/desafioCard.html
@@ -5,7 +5,49 @@
     <meta charset="UTF-8">
     <title>Desafio Card</title>
     <style>
-        /* ... */
+        .curso {
+            float: left;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            border: solid 1px #ccc;
+            width: 260px;
+            height: 300px;
+            margin: 5px 20px;
+            padding: 5px;
+            box-shadow: 0px 4px 20px 0px rgb(163, 161, 161);
+        }
+
+        .curso img {
+            width: 100%;
+            max-height: 50%;
+        }
+
+        .curso-info {
+            padding: 10px;
+            height: 90px;
+            overflow: hidden;
+        }
+
+        .curso-info h4 {
+            margin: 0px;
+            font-size: 1.4em;
+            font-weight: 100;
+        }
+
+        .curso-preco {
+            float: right;
+            padding: 10px;
+        }
+
+        .preco-de {
+            text-decoration: line-through;
+            color: firebrick;
+        }
+
+        .preco-por {
+            color: green;
+            font-weight: bold;
+            font-size: 1.6em;
+        }
     </style>
 </head>
 
