--- a/flexbox3.html
+++ b/flexbox3.html
@@ -6,7 +6,24 @@
     <title>Flexbox #03</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        .flex-container {
+            display: flex;
+        }
+
+        .flex-container div {
+            flex-basis: 100px;
+            width: 200px;
+            /*flex-basis é mais forte que width*/
+        }
+
+        .flex-container div:nth-child(4) {
+            /* grow shrink basis */
+            flex: 3 6 100px;
+        }
+
+        .flex-container {
+            width: 300px;
+        }
     </style>
 </head>
 
